# how-to-use-verimake-opench

./: README.md
4.Example/: .gitignore  CMakeLists.txt  Makefile  USAGE.md  download 20221231.txt
4.Example/01.Camera/: .launch  .project  .template  Camera.wvproj
4.Example/01.Camera/User/: lcd.h  main.c
4.Example/03.IIC_Sensor/: .cproject  .launch  .project  .template  IIC_Sensor.wvproj
4.Example/03.IIC_Sensor/User/: IIC.c  MPU6050.c  MPU6050.h  main.c
4.Example/04.Integrated_Test/: .launch  .project  .template  Integrated_Test.wvproj
4.Example/04.Integrated_Test/User/: AP3216C.c  IIC.c  MPU6050.c  main.c
4.Example/05.Record_Play/: .launch  .project  .template  CMakeLists.txt  Record_Play.wvproj
4.Example/05.Record_Play/User/: main.c
4.Example/06.USART/BLE_Serial/: .project  .template
4.Example/06.USART/BLE_Serial/User/: main.backupB  main.c
4.Example/06.USART/UART_Basic/: .project  .template  UART_Basic.wvproj
4.Example/06.USART/UART_Basic/User/: main.c
4.Example/06.USART/UART_DMA/: .project  .template  UART_DMA.wvproj
4.Example/06.USART/UART_DMA/User/: main.c
4.Example/06.USART/Wifi_ESP8266/: .project  .template
4.Example/06.USART/Wifi_ESP8266/User/: main.c
4.Example/07.SPI_Flash/: .cproject  .project  .template  SPI_Flash.wvproj
4.Example/07.SPI_Flash/User/: main.c
4.Example/08.KEY_TEST/: .launch  .project  .template  KEY_TEST.wvproj
4.Example/08.KEY_TEST/User/: main.c
4.Example/09.GreedySnake_Net/GreedySnake_Client/: .cproject  .launch  .project  .template  GreedySnake_Client.wvproj
4.Example/09.GreedySnake_Net/GreedySnake_Client/User/: lcd.c  main.c
4.Example/09.GreedySnake_Net/GreedySnake_Server/: .cproject  .launch  .project  .template  GreedySnake_Server.wvproj
4.Example/09.GreedySnake_Net/GreedySnake_Server/User/: main.c
4.Example/10.TcpClient/: .cproject  .project
4.Example/10.TcpClient/User/: main.c
4.Leanring/01.led/: main.c
4.Leanring/20.TinyMaix/: .project  .template  README.md
4.Leanring/20.TinyMaix/Debug/: debug.c
4.Leanring/20.TinyMaix/TinyMaix/examples/mnist/: mnist_main.c
4.Leanring/20.TinyMaix/TinyMaix/include/: tm_port.h
4.Leanring/20.TinyMaix/TinyMaix/src/: tm_stat.c
